# oxium-bootstrap

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ast.rs  lexer.rs  main.rs  parser.rs  print.rs  test.rs  token.rs
tests/lexer/: test_if.oxi  test_if_else.oxi  test_main.oxi  test_string.oxi
