[package]
name = "oxium-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
llvm-sys = "170.0.1"

[profile.release]
opt-level = 3
strip = true
debug-assertions = false
lto = true
codegen-units = 16
rpath = false
overflow-checks = false
panic = 'unwind'
incremental = false
debug = false